--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.5.4"
+    "fs": "^0.0.1-security",
+    "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   }
 }
