--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^10.12.0",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
